# aegis

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci-af-xdp-runner.yml  ci-af-xdp.yml  ci-dpdk-runner.yml  ci-dpdk.yml  ci-pcap.yml  ci-real-traffic.yml  ci.yml
aegis/: Cargo.toml
aegis/src/: main.rs  packet_ref.rs  rss.rs  runtime_config.rs
crates/af-xdp/: Cargo.toml
crates/af-xdp/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/: config_tests.rs
crates/core/: Cargo.toml
crates/core/src/: flow.rs  lib.rs  protector.rs  signature.rs  threat_intel.rs  types.rs
crates/dataplane/: Cargo.toml
crates/dataplane/src/: af_xdp.rs  dpdk.rs  lib.rs  pcap.rs
crates/dpdk/: Cargo.toml  build.rs
crates/dpdk/examples/: rss_probe.rs
crates/packet-parser/: Cargo.toml
crates/pcap-shim/: Cargo.toml  build.rs
crates/utils/: Cargo.toml
docker/: Dockerfile.ci  Dockerfile.runtime  README.md  build-matrix.sh  run_ci_tests.sh  seccomp_profile.json
scripts/: attack_c2_beacon.sh  attack_dns_amplification.sh  attack_exploit_signatures.sh  attack_fragmentation.sh  attack_fragmented_tls_clienthello.sh  attack_http_flood.sh  attack_http_obfuscation.sh  attack_icmp_flood.sh  attack_protocol_confusion.sh  attack_slowloris.sh  attack_syn_flood.sh  attack_tcp_ack_flood.sh  attack_tcp_segmentation.sh  attack_tls_handshake_flood.sh  attack_udp_flood.sh  attack_unicode_encoding.sh  capture_allow.sh  capture_deny_udp443.sh  chaos_config_reload_storm.sh  chaos_resource_exhaustion.sh  chaos_userspace_crash.sh  run_all_tests.sh  run_cli_checks.sh  run_feature_matrix.sh  run_long_soak.sh  run_perf_stress.sh  run_policy_correctness.sh  run_real_traffic_validation.sh  run_regressions.sh  run_rss_balance.sh  run_unit.sh
(+5 files in other folders)
