[package]
name = "aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
packet-parser = { path = "../crates/packet-parser" }
aegis-core = { path = "../crates/core" }
pcap-shim = { path = "../crates/pcap-shim" }
utils = { package = "aegis-utils", path = "../crates/utils" }
rayon = "1.10"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync"] }
