[package]
name = "aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
packet-parser = { path = "../crates/packet-parser" }
aegis-core = { path = "../crates/core" }
dataplane = { package = "aegis-dataplane", path = "../crates/dataplane" }
utils = { package = "aegis-utils", path = "../crates/utils" }
rayon = "1.10"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
core_affinity = "0.8"
