[package]
name = "aegis-dataplane"
version = "0.1.0"
edition = "2024"

[features]
default = ["pcap", "serde"]
pcap = ["dep:pcap-shim"]
af-xdp = []
dpdk = []
serde = ["dep:serde"]

[dependencies]
pcap-shim = { path = "../pcap-shim", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
